KH-8: Add Maven wrapper and make various fixes

--- a/resources/ozonepro-docker-compose.env
+++ b/resources/ozonepro-docker-compose.env
@@ -1,16 +1,21 @@
 DISTRO_PATH=../${project.artifactId}-${project.version}
-OPENMRS_CONFIG_PATH=${DISTRO_PATH}/openmrs_config
-OZONE_CONFIG_PATH=${DISTRO_PATH}/ozone_config
-OPENMRS_CORE_PATH=${DISTRO_PATH}/openmrs_core
-OPENMRS_MODULES_PATH=${DISTRO_PATH}/openmrs_modules
-EIP_PATH=${DISTRO_PATH}/eip_config
-SPA_PATH=${DISTRO_PATH}/spa
-FLINK_CONFIG_PATH=${DISTRO_PATH}/flink_config
-KEYCLOAK_CONFIG_PATH=${DISTRO_PATH}/keycloak_config
-SENAITE_CONFIG_PATH=${DISTRO_PATH}/senaite_config
-SUPERSET_CONFIG_PATH=${DISTRO_PATH}/superset_config
-ODOO_EXTRA_ADDONS=${DISTRO_PATH}/odoo_config/addons
-ODOO_CONFIG_PATH=${DISTRO_PATH}/odoo_config/odoo_csv
-ODOO_INITIALIZER_CONFIG_FILE_PATH=${DISTRO_PATH}/odoo_config/config/initializer_config.json
-ODOO_CONFIG_FILE_PATH=${DISTRO_PATH}/odoo_config/config/odoo.conf
+OPENMRS_CONFIG_PATH=../${project.artifactId}-${project.version}/openmrs_config
+OZONE_CONFIG_PATH=../${project.artifactId}-${project.version}/ozone_config
+OPENMRS_CORE_PATH=../${project.artifactId}-${project.version}/openmrs_core
+OPENMRS_MODULES_PATH=../${project.artifactId}-${project.version}/openmrs_modules
+EIP_PATH=../${project.artifactId}-${project.version}/eip_config
+SPA_PATH=../${project.artifactId}-${project.version}/spa
+FLINK_CONFIG_PATH=../${project.artifactId}-${project.version}/flink_config
+KEYCLOAK_CONFIG_PATH=../${project.artifactId}-${project.version}/keycloak_config
+SENAITE_CONFIG_PATH=../${project.artifactId}-${project.version}/senaite_config
+SUPERSET_CONFIG_PATH=../${project.artifactId}-${project.version}/superset_config
+ODOO_EXTRA_ADDONS=../${project.artifactId}-${project.version}/odoo_config/addons
+ODOO_CONFIG_PATH=../${project.artifactId}-${project.version}/odoo_config/odoo_csv
+ODOO_INITIALIZER_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/initializer_config.json
+ODOO_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/odoo.conf
+
+# TODO: Remove hardcoded value. This needs to be passed on at runtime.
 HOST_URL=http://host.docker.internal
+KEYCLOAK_FRONTEND_URL=http://host.docker.internal/auth
+OAUTH_ACCESS_TOKEN_URI=http://host.docker.internal/auth/realms/ozone/protocol/openid-connect/token
+OAUTH_CLIENT_SECRET=cc9da1b2-a9ce-442d-ae29-8c6bf8b44d20
