--- a/resources/ozonepro-docker-compose.env
+++ b/resources/ozonepro-docker-compose.env
@@ -14,8 +14,9 @@ ODOO_CONFIG_PATH=../${project.artifactId}-${project.version}/odoo_config/odoo_cs
 ODOO_INITIALIZER_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/initializer_config.json
 ODOO_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/odoo.conf
 
-# TODO: Remove hardcoded value. This needs to be passed on at runtime.
-HOST_URL=http://host.docker.internal
-KEYCLOAK_FRONTEND_URL=http://host.docker.internal/auth
-OAUTH_ACCESS_TOKEN_URI=http://host.docker.internal/auth/realms/ozone/protocol/openid-connect/token
+HOST_URL=http://172.17.0.1
+KEYCLOAK_FRONTEND_URL=http://172.17.0.1/auth
+OAUTH_ACCESS_TOKEN_URI=http://172.17.0.1/auth/realms/ozone/protocol/openid-connect/token
+
+# Secret used for demo purposes only
 OAUTH_CLIENT_SECRET=cc9da1b2-a9ce-442d-ae29-8c6bf8b44d20
