--- a/resources/ozonepro-docker-compose.env
+++ b/resources/ozonepro-docker-compose.env
@@ -18,5 +18,11 @@ HOST_URL=http://172.17.0.1
 KEYCLOAK_FRONTEND_URL=http://172.17.0.1/auth
 OAUTH_ACCESS_TOKEN_URI=http://172.17.0.1/auth/realms/ozone/protocol/openid-connect/token
 
+# Uncoment the following lines if using Mac hosts. And remove the 3 lines above.
+#
+# HOST_URL=http://host.docker.internal
+# KEYCLOAK_FRONTEND_URL=http://host.docker.internal/auth
+# OAUTH_ACCESS_TOKEN_URI=http://host.docker.internal/auth/realms/ozone/protocol/openid-connect/token
+
 # Secret used for demo purposes only
 OAUTH_CLIENT_SECRET=cc9da1b2-a9ce-442d-ae29-8c6bf8b44d20
