Add Mekom's private Maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -134,5 +134,9 @@
       <id>mks-nexus-public</id>
       <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
     </repository>
+    <repository>
+      <id>mks-nexus-private</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+    </repository>
   </repositories>
 </project>
