--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,20 @@
   <name>Ozone Pro distribution for Cambodia</name>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <organization>
+    <name>Ozone HIS</name>
+    <url>http://www.ozone-his.com</url>
+  </organization>
   <developers>
     <developer>
       <name>Mekom Solutions</name>
+      <url>http://www.mekomsolutions.com</url>
     </developer>
   </developers>
-  <organization>
-    <name>Mekom Solutions</name>
-    <url>http://www.mekomsolutions.com</url>
-  </organization>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <buildDirectory>${project.build.directory}</buildDirectory>
+    <assemblyClassifier/>
   </properties>
   <dependencies>
     <dependency>
@@ -25,6 +28,50 @@
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <!-- Introducing confidentiality dependencies for production-like environments -->
+      <id>prod</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <assemblyClassifier>prod</assemblyClassifier>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>net.mekomsolutions</groupId>
+          <artifactId>ozone-config-cambodia0</artifactId>
+          <type>zip</type>
+          <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.8</version>
+            <executions>
+              <execution>
+                <id>unpack-ozone-config-cambodia0</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>unpack-dependencies</goal>
+                </goals>
+                <configuration>
+                  <excludeTransitive>true</excludeTransitive>
+                  <useBaseVersion>true</useBaseVersion>
+                  <outputDirectory>${buildDirectory}/${project.artifactId}-${project.version}</outputDirectory>
+                  <includeArtifactIds>ozone-config-cambodia0</includeArtifactIds>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
   <build>
     <plugins>
       <!-- Copy the Ozone Pro Distro resources -->
@@ -42,7 +89,7 @@
             <configuration>
               <excludeTransitive>true</excludeTransitive>
               <useBaseVersion>true</useBaseVersion>
-              <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+              <outputDirectory>${buildDirectory}/${project.artifactId}-${project.version}</outputDirectory>
               <includeArtifactIds>ozonepro-distro</includeArtifactIds>
             </configuration>
           </execution>
@@ -62,7 +109,7 @@
             </goals>
             <configuration>
               <executable>${basedir}/resources/exclude-files.sh</executable>
-              <commandlineArgs>${project.build.directory}/${project.artifactId}-${project.version}</commandlineArgs>
+              <commandlineArgs>${buildDirectory}/${project.artifactId}-${project.version}</commandlineArgs>
             </configuration>
           </execution>
         </executions>
@@ -80,7 +127,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+              <outputDirectory>${buildDirectory}/${project.artifactId}-${project.version}</outputDirectory>
               <resources>
                 <resource>
                   <directory>${project.basedir}/configs</directory>
@@ -96,11 +143,11 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/resources</outputDirectory>
+              <outputDirectory>${buildDirectory}/resources</outputDirectory>
               <resources>
                 <resource>
                   <directory>${project.basedir}/resources</directory>
-                   <filtering>true</filtering>
+                  <filtering>true</filtering>
                 </resource>
               </resources>
             </configuration>
@@ -119,7 +166,8 @@
               <goal>single</goal>
             </goals>
             <configuration>
-              <appendAssemblyId>false</appendAssemblyId>
+              <!-- <classifier>${profile.classifier}</classifier>-->
+              <appendAssemblyId>true</appendAssemblyId>
               <descriptors>
                 <descriptor>assembly.xml</descriptor>
               </descriptors>
@@ -139,4 +187,16 @@
       <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
     </repository>
   </repositories>
+  <distributionManagement>
+    <repository>
+      <name>Mekom Solutions Nexus repo</name>
+      <id>mks-nexus-private</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+    </repository>
+    <snapshotRepository>
+      <name>Mekom Solutions Nexus repo for snapshots</name>
+      <id>mks-nexus-private-snapshots</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
