--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -33,38 +33,6 @@ jobs:
             }]
         if: ${{ github.ref == 'refs/heads/main' }}
 
-      - name: Publish
-        run: mvn --batch-mode clean deploy
-        if: ${{ github.ref == 'refs/heads/main' }}
-
-  build-prod:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '8'
-
-      - name: Set settings.xml
-        uses: s4u/maven-settings-action@v2.8.0
-        with:
-          servers: |
-            [{
-              "id": "mks-nexus-private",
-              "username": "${{ secrets.MEKOM_NEXUS_USERNAME }}",
-              "password": "${{ secrets.MEKOM_NEXUS_PASSWORD }}"
-            },
-            {
-              "id": "mks-nexus-private-snapshots",
-              "username": "${{ secrets.MEKOM_NEXUS_USERNAME }}",
-              "password": "${{ secrets.MEKOM_NEXUS_PASSWORD }}"
-            }]
-        if: ${{ github.ref == 'refs/heads/main' }}
-
-      - name: Publish with 'prod' profile
+      - name: Build and publish (with 'prod' profile)
         run: mvn --batch-mode clean deploy -Pprod
         if: ${{ github.ref == 'refs/heads/main' }}
