--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.mekomsolutions</groupId>
-  <artifactId>ozonepro-distro-cambodia</artifactId>
-  <name>Ozone Pro distribution for Cambodia</name>
+  <artifactId>ozone-distro-cambodia</artifactId>
+  <name>Ozone distribution for Cambodia</name>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <organization>
@@ -79,7 +79,6 @@
                   <goal>single</goal>
                 </goals>
                 <configuration>
-                  <!-- <classifier>${profile.classifier}</classifier>-->
                   <appendAssemblyId>true</appendAssemblyId>
                   <descriptors>
                     <descriptor>assembly.xml</descriptor>
@@ -186,7 +185,6 @@
               <goal>single</goal>
             </goals>
             <configuration>
-              <!-- <classifier>${profile.classifier}</classifier>-->
               <appendAssemblyId>false</appendAssemblyId>
               <descriptors>
                 <descriptor>assembly.xml</descriptor>
