--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.mekomsolutions</groupId>
+  <groupId>com.ozonehis</groupId>
   <artifactId>ozone-distro-cambodia</artifactId>
   <name>Ozone distribution for Cambodia</name>
   <version>1.0.0-SNAPSHOT</version>
@@ -22,7 +22,7 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>net.mekomsolutions</groupId>
+      <groupId>com.ozonehis</groupId>
       <artifactId>ozonepro-distro</artifactId>
       <type>zip</type>
       <version>1.0.0-SNAPSHOT</version>
@@ -40,7 +40,7 @@
       </properties>
       <dependencies>
         <dependency>
-          <groupId>net.mekomsolutions</groupId>
+          <groupId>com.ozonehis</groupId>
           <artifactId>ozone-config-cambodia0</artifactId>
           <type>zip</type>
           <version>1.0.0-SNAPSHOT</version>
