KH-40: Execute Maven Executions at earlier phases to ensure the confidentiality layer is loaded last
(Comes as a workaround to the issue stated here https://stackoverflow.com/a/22184600/11387004)

--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
         <executions>
           <execution>
             <id>unpack-ozone-pro-distro</id>
-            <phase>package</phase>
+            <phase>prepare-package</phase>
             <goals>
               <goal>unpack-dependencies</goal>
             </goals>
@@ -140,8 +140,8 @@
         <executions>
           <execution>
             <!-- Override with local configuration into the target folder -->
-            <id>copy-resources</id>
-            <phase>package</phase>
+            <id>copy-local-resources</id>
+            <phase>prepare-package</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
