Migrate the KH-3 branch from the RefApp to the ozone-distro-cambodia

--- a/resources/ozonepro-docker-compose.env
+++ b/resources/ozonepro-docker-compose.env
@@ -14,9 +14,9 @@ ODOO_CONFIG_PATH=../${project.artifactId}-${project.version}/odoo_config/odoo_cs
 ODOO_INITIALIZER_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/initializer_config.json
 ODOO_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/odoo.conf
 
-HOST_URL=http://172.17.0.1
-KEYCLOAK_FRONTEND_URL=http://172.17.0.1/auth
-OAUTH_ACCESS_TOKEN_URI=http://172.17.0.1/auth/realms/ozone/protocol/openid-connect/token
+HOST_URL=https://80-openmrs-ozonedistrocamb-jdgf9qfe1hb.ws-eu81.gitpod.io
+KEYCLOAK_FRONTEND_URL=https://80-openmrs-ozonedistrocamb-jdgf9qfe1hb.ws-eu81.gitpod.io/auth
+OAUTH_ACCESS_TOKEN_URI=https://80-openmrs-ozonedistrocamb-jdgf9qfe1hb.ws-eu81.gitpod.io/auth/realms/ozone/protocol/openid-connect/token
 
 # Uncoment the following lines if using Mac hosts. And remove the 3 lines above.
 #
