--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
+  
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-distro-cambodia</artifactId>
-  <name>Ozone distribution for Cambodia</name>
+  <name>Ozone Distribution for Cambodia</name>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  
   <organization>
     <name>Ozone HIS</name>
     <url>http://www.ozone-his.com</url>
@@ -15,11 +17,13 @@
       <url>http://www.mekomsolutions.com</url>
     </developer>
   </developers>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <buildDirectory>${project.build.directory}</buildDirectory>
     <assemblyClassifier/>
   </properties>
+  
   <dependencies>
     <dependency>
       <groupId>com.ozonehis</groupId>
@@ -28,6 +32,7 @@
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  
   <profiles>
     <profile>
       <!-- Introducing confidentiality dependencies for production environments -->
@@ -91,6 +96,7 @@
       </build>
     </profile>
   </profiles>
+  
   <build>
     <plugins>
       <!-- Copy the Ozone Pro Distro resources -->
@@ -195,6 +201,7 @@
       </plugin>
     </plugins>
   </build>
+  
   <repositories>
     <repository>
       <id>mks-nexus-public</id>
@@ -205,6 +212,7 @@
       <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
     </repository>
   </repositories>
+  
   <distributionManagement>
     <repository>
       <name>Mekom Solutions Nexus repo</name>
@@ -217,4 +225,5 @@
       <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+  
 </project>
