Fix typo in HOST_URL

--- a/resources/ozonepro-docker-compose.env
+++ b/resources/ozonepro-docker-compose.env
@@ -14,7 +14,7 @@ ODOO_CONFIG_PATH=../${project.artifactId}-${project.version}/odoo_config/odoo_cs
 ODOO_INITIALIZER_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/initializer_config.json
 ODOO_CONFIG_FILE_PATH=../${project.artifactId}-${project.version}/odoo_config/config/odoo.conf
 
-HOST_URL=https:http://172.17.0.1
+HOST_URL=http://172.17.0.1
 KEYCLOAK_FRONTEND_URL=http://172.17.0.1/auth
 OAUTH_ACCESS_TOKEN_URI=http://172.17.0.1/auth/realms/ozone/protocol/openid-connect/token
 
