--- a/run/pom.xml
+++ b/run/pom.xml
@@ -118,4 +118,14 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <id>mks-nexus-public</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
+    </repository>
+    <repository>
+      <id>mks-nexus-private</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+    </repository>
+  </repositories>
 </project>
