--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -79,11 +79,12 @@
       ],
       "Translation overrides": {
         "en": {
-          "address1": "Commune",
-          "cityVillage": "City",
-          "country": "Country",
-          "stateProvince": "Province",
-          "countyDistrict": "District",
+
+          "Commune": "Commune",
+          "Village": "City",
+          "Country": "Country",
+          "Province": "Province",
+          "District": "District",
           "contactSection": "Contact Details",
           "demographicsSection": "Basic Info",
           "Male": "Male",
@@ -92,11 +93,11 @@
           "Unknown": "Unknown"
         },
         "km": {
-          "address1": "ឃុំ/សង្កាត់",
-          "cityVillage": "ទីក្រុង",
-          "country": "ប្រទេស",
-          "stateProvince": "ខេត្ត",
-          "countyDistrict": "ស្រុក/ខ័ណ្ឌ",
+          "Commune": "ឃុំ/សង្កាត់",
+          "Village": "ទីក្រុង",
+          "Country": "ប្រទេស",
+          "Province": "ខេត្ត",
+          "District": "ស្រុក/ខ័ណ្ឌ",
           "contactSection": "ព័ត៌មានទំនាក់ទំនងលម្អិត",
           "demographicsSection": "ព័ត៌មានមូលដ្ឋាន",
           "Male": "ប្រុស",
