--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -4,6 +4,24 @@
         "demographicsSection",
         "contactSection"
       ],
+
+      "fieldConfigurations": [
+        {
+          "gender": [
+            {
+              "id": "male",
+              "value": "Male",
+              "label": "Male"
+            },
+            {
+              "id": "female",
+              "value": "Female",
+              "label": "Female"
+            }
+          ]
+        }
+      ],
+
       "fieldDefinitions": [
         {
           "id": "telephoneField",
