Add section for Additional information

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -91,6 +91,19 @@
           ]
         },
         {
+          "id": "contactSection",
+          "name": "Contact Details",
+          "fields": [
+            "address",
+            "telephoneField",
+            "occupationField",
+            "ethnicityField",
+            "birthPlaceField",
+            "socialStatusField",
+            "educationField"
+          ]
+        },
+        {
           "id": "deathSection",
           "name": "Death Info",
           "fields": []
