Move birth place field to Additional Information section

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -83,8 +83,7 @@
           "name": "Contact Details",
           "fields": [
             "address",
-            "telephoneField",
-            "birthPlaceField"
+            "telephoneField"
           ]
         },
         {
@@ -93,6 +92,7 @@
           "fields": [
             "occupationField",
             "ethnicityField",
+            "birthPlaceField",
             "socialStatusField",
             "educationField"
           ]
