--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -2,7 +2,8 @@
     "@openmrs/esm-patient-registration-app": {
       "sections": [
         "demographicsSection",
-        "contactSection"
+        "contactSection",
+        "additionalInformation"
       ],
       "fieldConfigurations":
       {
@@ -82,7 +83,13 @@
           "name": "Contact Details",
           "fields": [
             "address",
-            "telephoneField",
+            "telephoneField"
+          ]
+        },
+        {
+          "id": "additionalInformation",
+          "name": "Additional Information",
+          "fields": [
             "occupationField",
             "ethnicityField",
             "birthPlaceField",
